# learn-misc

learn-async/: async_uml.drawio  impl_eventloop.py  notes.md  server.py  using_selectors.py  using_threads.py
learn-click/: Notes.md
learn-click/repo/: repo.py  setup.py
learn-click/simple/: args.py  cmds.py  feature_flags.py  hello.py
learn-colorama/: main.py
learn-design-patterns/behavioral/: chain_of_resp.ipynb  command.ipynb  mediator.ipynb  memento.ipynb  observer.ipynb  state.ipynb  strategy.ipynb  template.ipynb  visitor.ipynb
learn-eigen/demo-eigen/: Main.cpp  a.out
learn-functional-programming/: chapter-2.ipynb
learn-getopt/:  Notes.md  Example.cpp  a.out
learn-hydra/: README.md
learn-networking/: networking-notes.md  notes.txt  showip.c  structs.txt
learn-networking/c/addrinfo-demo/: CMakeLists.txt  main.c  netutils.c  netutils.h  run.fish  stringutils.c  stringutils.h
learn-networking/c/multiplex/: CMakeLists.txt  run.fish
learn-networking/c/multiplex/src/: client.c  client.h  main.c  server.c  server.h  server2.c  utils.c  utils.h
learn-networkx/: learn.ipynb
learn-os-concurrency/: Makefile  hello.c  notes.md  race.c  retval.c  simple.c  tid.c
learn-pandoc/: README.txt  markdown.css  math_sample.html  math_sample.md  sample.html  sample_gold.html
learn-pyaudio/: hello.flac  hello2.flac  output.raw  real_time.py  record.py  stot.py  vlc-output.flac
learn-pyodide/: aliens.html  index.html  scratch.py  temp.txt  touch.html  tp.py
learn-wandb/: learn-wandb.code-workspace  quickstart.ipynb  track_experiment_tut.ipynb
(+41 files in other folders)
